Replace disqus with utteranc.es

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,1 +1,7 @@
-{{ template "_internal/disqus.html" . }}
+<script src="https://utteranc.es/client.js"
+        repo="geowarin/geowarin.github.io"
+        issue-term="title"
+        theme="photon-dark"
+        crossorigin="anonymous"
+        async>
+</script>
