--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,7 +1,24 @@
-<script src="https://utteranc.es/client.js"
-        repo="geowarin/geowarin.github.io"
-        issue-term="title"
-        theme="photon-dark"
-        crossorigin="anonymous"
-        async>
-</script>
+<section class="comments">
+    <script>
+        function loadComments() {
+            const theme = document.body.classList.contains('dark') ? 'photon-dark' : 'github-light';
+            let s = document.createElement('script');
+            s.src = 'https://utteranc.es/client.js';
+            s.setAttribute('repo', 'geowarin/geowarin.github.io');
+            s.setAttribute('issue-term', 'title');
+            s.setAttribute('theme', theme);
+            s.setAttribute('crossorigin', 'anonymous');
+            s.setAttribute('async', '');
+            document.querySelector('section.comments').innerHTML = '';
+            document.querySelector('section.comments').appendChild(s);
+        }
+
+        const mutationObserver = new MutationObserver(mutationsList => {
+            if (mutationsList.some(mutation => mutation.attributeName === 'class')) {
+                loadComments();
+            }
+        });
+        mutationObserver.observe(document.body, { attributes: true });
+        loadComments();
+    </script>
+</section>
