--- a/assets/css/extended/overlay.css
+++ b/assets/css/extended/overlay.css
@@ -7,3 +7,20 @@
     justify-content: center;
     align-items: center;
 }
+
+.overlay-content {
+    text-align: center;
+    background: #1c1d21;
+    color: white;
+}
+
+.close {
+    position: fixed;
+    right: 0;
+    top: 0;
+    border: 1px solid black;
+    width: 30px;
+    height: 30px;
+    color: white;
+    background: black;
+}
