--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,7 +1,7 @@
 <div id="img-overlay" style="display: none;">
     <button class="close">X</button>
     <div class="overlay-content">
-        <img id="img-content">
+        <img id="img-content" />
         <div id="img-caption"></div>
     </div>
 </div>
