--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -3,7 +3,7 @@
 <script>
     mermaid.initialize({
         startOnLoad: true,
-        theme: 'dark',
+        theme: document.documentElement.dataset.theme,
     });
 </script>
 {{ end }}
